# paradis

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: parallel_iteration.rs  single_thread_iter.rs
examples/: even_odd.rs  even_odd_pointers.rs  rayon_access_iter_matrix_cols.rs  rayon_access_iter_slice.rs  rayon_access_nalgebra.rs  rayon_access_slice.rs  rayon_access_u32_indices.rs  rayon_multidim.rs
paradis-core/: Cargo.toml
paradis-core/src/: lib.rs  par_access.rs  record_index.rs  slice.rs
paradis-demo/: Cargo.toml
paradis-demo/src/: lib.rs
src/: error.rs  index_from.rs  iter.rs  lib.rs  rayon.rs  unique_index.rs
src/index/: assumed_unique.rs  checked_unique.rs  index_list.rs  index_list_impl_std.rs  mod.rs  narrowed_access.rs
src/index/combinators/: index_cast.rs  index_flatten.rs  index_product.rs  index_transpose.rs  index_zip.rs
src/index/patterns/: mod.rs  repeat.rs
src/unique/: checked_unique.rs  checked_unique_indices.rs  index_from.rs  index_list.rs  mod.rs  narrowed_access.rs  repeat.rs  unique_indices.rs
src/unique/combinators/: index_cast.rs  index_flatten.rs  index_product.rs  index_transpose.rs  index_zip.rs  mod.rs
tests/unit_tests/: iter.rs  mod.rs  slice.rs
tests/unit_tests/unique/: flatten.rs
