[package]
name = "paradis"
version = "0.1.0"
edition = "2021"
description = "Parallel processing with disjoint indices"
authors = [ "Andreas Longva "]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Andlon/paradis"
documentation = "https://docs.rs/paradis"
keywords = [ "parallel", "thread", "disjoint", "index", "indices" ]
categories = [ "concurrency", "rust-patterns" ]

[features]
rayon = [ "dep:rayon" ]

[dependencies]
paradis-core = { version = "0.1.0", path = "paradis-core" }
rayon = { version = "1.6.1", optional = true }

[[example]]
name = "rayon_access_slice"
required-features = [ "rayon" ]

[[example]]
name = "rayon_access_nalgebra"
required-features = [ "rayon" ]

[dev-dependencies]
## Used for some examples. TODO: Ideally this would be optional, but it doesn't look
## like this is possible?
nalgebra = { version = "0.32.1" }
paradis-demo = { path = "paradis-demo" }

divan = "0.1.14"

[workspace]
members = [ "paradis-core" , "paradis-demo" ]

[[bench]]
name = "parallel_iteration"
harness = false

[[bench]]
name = "single_thread_iter"
harness = false

[package.metadata.docs.rs]
features = [ "rayon" ]

# We use this attribute to enable the doc(cfg) feature, which documents
# required features for feature-gated functionality
rustdoc-args = ["--cfg", "docsrs"]

[profile.bench]
lto = "thin"
codegen-units = 1
debug = true
