[package]
name = "paradis-core"
version = "0.1.0"
edition = "2021"
description = "core functionality for paradis"
authors = [ "Andreas Longva "]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/Andlon/paradis"
documentation = "https://docs.rs/paradis-core"
keywords = [ "parallel", "thread", "disjoint", "index", "indices" ]
categories = [ "concurrency", "rust-patterns" ]

[dependencies]
